# spark-on-k8s

./: .gitignore  README.md  create_k8s_cluster.sh  generate_kubeconfig_input.sh  pyproject.toml  pyspark-3.3.yaml  pyspark-3.5.yaml  spark.yml  trigger-spark-operator.py
docker/: Dockerfile  requirements.txt
examples/: spark-pi-py.yaml  spark-pi.yaml
k8s/: priorities.yaml  pyspark-ui-ingress.yaml  python-sa.yaml  sa-token.yaml  spark-application-rbac.yaml  test-token.yaml
