[project]
name = "spark-on-k8s"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gayle", email = "gayletan@gmail.com"},
]
dependencies = [
    "pyspark==3.5.0",
    "kubernetes>=29.0.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
